# Deep-Audio-Dataset

./: .gitignore  README.md  dataset.py  pyproject.toml  requirements.txt  test_dataset.py
.github/workflows/: build-wheel.yml  python-app.yml  ruff.yml
deep_audio_dataset/: __init__.py  dataset.py
src/deep_audio_dataset/: __init__.py  dataset.py
tests/: test_dataset.py  test_utils.py  testutils.py
