[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_audio_dataset"
version = "0.1"
authors = [
  { name="Patrick Donnelly", email="Patrick.Donnelly@oregonstate.edu" },
  { name="Doug Dennis", email="douglasdennisjr@gmail.com" },
]
description = "Audio dataset management for deep learning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Soundbendor/Deep-Audio-Dataset"
"Bug Tracker" = "https://github.com/Soundbendor/Deep-Audio-Dataset/issues"

[tool.ruff]
select = ['E', 'D', 'F', 'N', 'W']
line-length = 120
ignore-init-module-imports = true
extend-ignore = ['D203', 'D212']

[tool.ruff.pydocstyle]
convention = "google"
